--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,6 +1,8 @@
 <html>
     <body>
-        <table>
+        <%= nav_bar brand: 'Teeshop', brand_link: root_url %>
+
+        <table class="table table-bordered">
             <thead>
                 <tr>
                     <th>Nome</th>
@@ -10,18 +12,18 @@
                 </tr>
             </thead>
             <tbody>
-                <% @produtos_por_nome.each do |produto| %>
+                <% @products_by_name.each do |product| %>
                 <tr>
-                    <td><%= produto.nome %></td>
-                    <td><%= produto.descricao %></td>
-                    <td><%= produto.preco %></td>
-                    <td><%= produto.quantidade %></td>
+                    <td><%= product.name %></td>
+                    <td><%= product.description %></td>
+                    <td><%= product.price %></td>
+                    <td><%= product.amount %></td>
                 </tr>
                 <% end %>
             </tbody>
         </table>
 
-        <table>
+        <table class="table table-bordered">
             <thead>
                 <tr>
                     <th>Nome</th>
@@ -31,12 +33,12 @@
                 </tr>
             </thead>
             <tbody>
-                <% @produtos_por_preco.each do |produto| %>
+                <% @products_by_price.each do |product| %>
                 <tr>
-                    <td><%= produto.nome %></td>
-                    <td><%= produto.descricao %></td>
-                    <td><%= produto.preco %></td>
-                    <td><%= produto.quantidade %></td>
+                    <td><%= product.name %></td>
+                    <td><%= product.description %></td>
+                    <td><%= product.price %></td>
+                    <td><%= product.amount %></td>
                 </tr>
                 <% end %>
             </tbody>
