--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -44,4 +44,4 @@
   </tbody>
 </table>
 
-<%= link_to 'Criar novo produto', products_new_path %>
+<%= link_to 'Criar novo produto', new_product_path %>
