--- a/app/views/products/find.html.erb
+++ b/app/views/products/find.html.erb
@@ -8,6 +8,6 @@
     </tr>
   </thead>
   <tbody>
-    <%= render partial: 'product', collection: @products_finded %>
+    <%= render @products_finded %>
   </tbody>
 </table>
