--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -13,7 +13,7 @@
     </tr>
   </thead>
   <tbody>
-    <%= render partial: 'product', collection: @products_by_name %>
+    <%= render @products_by_name %>
   </tbody>
 </table>
 
@@ -27,7 +27,7 @@
     </tr>
   </thead>
   <tbody>
-    <%= render partial: 'product', collection: @products_by_price %>
+    <%= render @products_by_price %>
   </tbody>
 </table>
 
