--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -4,6 +4,7 @@
   <td><%= product.price %></td>
   <td><%= product.amount %></td>
   <td>
+    <%= link_to 'Alterar', edit_product_path(product), class: 'btn btn-default' %>
     <%= button_to 'Remover', product, method: :delete, data: { confirm: "Tem certeza que deseja remover #{product.name}?" }, class: 'btn btn-danger' %>
   </td>
 </tr>
