--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,35 +1,1 @@
-<% @product.errors.full_messages.each do |message| %>
-<div class="alert alert-danger" role="alert"><%= message %></div>
-<% end %>
-
-<%= form_for @product do |f| %>
-
-  <div class="form-group">
-    <%= f.label :name %>
-    <%= f.text_field :name, class: 'form-control' %>
-  </div>
-
-  <div class="form-group">
-    <%= f.label :description %>
-    <%= f.text_area :description, rows: 4, class: 'form-control' %>
-  </div>
-
-  <div class="row">
-    <div class="col-xs-6">
-      <div class="form-group">
-        <%= f.label :amount %>
-        <%= f.number_field :amount, step: 1, class: 'form-control' %>
-      </div>
-    </div>
-
-    <div class="col-xs-6">
-      <div class="form-group">
-        <%= f.label :price %>
-        <%= f.number_field :price, step: 0.01, class: 'form-control' %>
-      </div>
-    </div>
-  </div>
-
-  <%= f.submit 'Criar o produto', class: 'btn btn-primary' %>
-
-<% end %>
+<%= render partial: 'form', locals: { label_action: 'Criar o produto' } %>
